# pilotclient

./: .arcconfig  .astylerc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlint  .gitmodules  .qmake.conf  CMakeLists.txt  CMakePresets.json  Jenkinsfile  LICENSE  LICENSE.html  README.markdown  README.md  REUSE.toml  build.pri  client.pro  conanfile.py  config.pri  cppcheck.supp  cppcheck_suppressions.conf  default.json  default.json.license  externals.pri  fontsize.html  install.pri  libraries.pri  png.h  readthedocs.yml  swift.pro  version.json  zconf.h
cmake/crashpad/: CMakeLists.txt
cmake/dbus/: CMakeLists.txt
cmake/dplay/: CMakeLists.txt
cmake/event/: CMakeLists.txt
cmake/msgpack/: CMakeLists.txt
cmake/opus/: CMakeLists.txt
cmake/qwt_plot/: CMakeLists.txt
cmake/rapidjson/: CMakeLists.txt
cmake/simconnect/: CMakeLists.txt
cmake/sodium/: CMakeLists.txt
cmake/tls/: CMakeLists.txt
cmake/vatsimauth/: CMakeLists.txt
cmake/xp/: CMakeLists.txt
resources/: CMakeLists.txt  resources.pro  swift_resources.pri  swift_resources.pro  swiftresources.pro
resources/local.env.template/: readme.txt
resources/swiftDB/: models.json
samples/: CMakeLists.txt  samples.pro
samples/Geodetic2Ecef/: CMakeLists.txt  Geodetic2Ecef.pro  main.cpp  sample_geodetic2ecef.pro
samples/Logging/: Logging.pro  main.cpp  sample_logging.pro
samples/afvclient/: CMakeLists.txt  afvclient.pro  afvclientbridge.cpp  afvclientbridge.h  afvmapreader.cpp  afvmapreader.h  main.cpp
samples/blackcore/: blackcore.qrc  blackcore.rc  main.cpp  readme.txt  sample_blackcore.pro  tool.cpp  tool.h
samples/blackgui/: flightplanwidget.cpp  flightplanwidget.h  flightplanwidget.ui  guimodeenums.h  infowindow.cpp  infowindow.h  infowindow.ui  introwindow.cpp  introwindow.h  introwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_aircraft.cpp  mainwindow_atc.cpp  mainwindow_cockpit.cpp  mainwindow_init.cpp  mainwindow_menus.cpp  mainwindow_settings.cpp  mainwindow_textmessages.cpp  mainwindow_voice.cpp  sample_blackgui.pro  stylesheetmain.qss
samples/blackgui2/: dockwindow.cpp  dockwindow.h  dockwindow.ui  guimodeenums.h  introwindow.cpp  introwindow.h  main.cpp  sample_blackgui2.pro  stylesheetintro.qss
samples/blackmisc/: CMakeLists.txt  main.cpp  sample_blackmisc.pro  sampleblackmisc.h  sampleblackmisc.pro  samplesalgorithm.cpp  samplesalgorithm.h  sampleschangeobject.cpp  sampleschangeobject.h  samplesconcurrent.cpp  samplesconcurrent.h  samplescontainer.cpp  samplescontainer.h  samplesfile.cpp  samplesfile.h  samplesjson.cpp  samplesjson.h  samplesmetadata.cpp  samplesmetadata.h  samplesperformance.cpp  samplesperformance.h  samplesvariant.cpp  samplesvariant.h
samples/blackmiscdbus/: BlackMiscTest.Datacontext.xml  BlackMiscTest.Testservice.xml  blackmiscdbus.pro  datacontext.cpp  datacontext.h  dummysignalslot.cpp  dummysignalslot.h  main.cpp  readme.txt  sample_blackmisc_dbus.pro  sampleblackmiscdbus.h  sampleblackmiscdbus.pro  servicetool.cpp  servicetool.h  testservice.cpp  testservice.h  testservice_interface.cpp  testservice_interface.h  testserviceinterface.cpp  testserviceinterface.h
samples/blackmiscgeo/: main.cpp  sample_geo.pro  samplesgeo.cpp  samplesgeo.h
samples/blackmiscquantities/: CMakeLists.txt  main.cpp  sample_quantities_aviation.pro  sample_quantities_avionics.pro  sampleblackmiscquantities.h  sampleblackmiscquantities.pro  samplesaviation.cpp  samplesaviation.h  samplesgeo.cpp  samplesgeo.h  samplesphysicalquantities.cpp  samplesphysicalquantities.h
samples/blackmiscquantities_dbus/: BlackMiscTest.Testservice.xml  main.cpp  readme.txt  sample_quantities_avionics_dbus.pro  testservice.cpp  testservice.h  testservicetool.cpp  testservicetool.h
samples/blackmiscquantities_dbus_xmlplugin/: sample_quantities_avionics_xmlplugin.pro  sampleplugin.cpp  sampleplugin.h
samples/blackmiscsim/: CMakeLists.txt  main.cpp  sample_blackmisc_sim.pro  sampleblackmiscsim.h  sampleblackmiscsim.pro  samplesfscommon.cpp  samplesfscommon.h  samplesfsuipc.cpp  samplesfsuipc.h  samplesfsx.cpp  samplesfsx.h  samplesmodelmapping.cpp  samplesmodelmapping.h  samplesp3d.cpp  samplesp3d.h  samplesvpilotrules.cpp  samplesvpilotrules.h  sampleutils.cpp  sampleutils.h
samples/blackmiscvectorgeo/: main.cpp  sample_vector_geo.pro  samplesgeo.cpp  samplesgeo.h  samplesgeodetictoecef.cpp  samplesgeodetictoecef.h  samplesvectormatrix.cpp  samplesvectormatrix.h
samples/blacksim/: main.cpp  sample_blacksim.pro  samplesfscommon.cpp  samplesfscommon.h  samplesfsx.cpp  samplesfsx.h  samplesmodelmapping.cpp  samplesmodelmapping.h
samples/cli_client/: CMakeLists.txt  client.cpp  client.h  main.cpp  reader.cpp  reader.h  sample_cli_client.pro
samples/cliclient/: CMakeLists.txt  client.cpp  client.h  main.cpp  reader.cpp  reader.h  samplecliclient.h  samplecliclient.pro
samples/com_client/: client.cpp  client.h  com_client.pro  main.cpp  sample_com_client.pro
samples/com_server/: CMakeLists.txt  com_server.pro  main.cpp  sample_com_server.pro  server.cpp  server.h
samples/config/: CMakeLists.txt  config.pro  main.cpp  sample_config.pro
samples/dbusclient/: dbusclient.cpp  dbusclient.h  main.cpp  planemanager.xml  remote_aircraft.cpp  remote_aircraft.h  sample_dbusclient.pro
samples/dbusserver/: aircraft_manager.cpp  aircraft_manager.h  aircraft_manager_handler.cpp  aircraft_manager_handler.h  atc_manager.cpp  atc_manager.h  atc_manager_handler.cpp  (+23 more)
src/: BitmapUtils.cpp  BitmapUtils.h  CMakeLists.txt  CSLLoaderThread.cpp  CSLLoaderThread.h  Interpolation.i  PlatformUtils.h  PlatformUtils.mac.cpp  PlatformUtils.win.cpp  TexUtils.h  XOGLUtils.cpp  XOGLUtils.h  XObjDefs.cpp  XObjReadWrite.cpp  XPCAircraft.cpp  XPMPMultiplayer.cpp  XPMPMultiplayerCSL.cpp  XPMPMultiplayerCSL.h  XPMPMultiplayerObj.cpp  XPMPMultiplayerObj.h  XPMPMultiplayerObj8.cpp  XPMPMultiplayerObj8.h  XPMPMultiplayerVars.cpp  XPMPMultiplayerVars.h  XPMPPlaneRenderer.cpp  XUtils.cpp  XUtils.h  mainpage.dox  permissiveworkarounds.h  src.pro
tests/: CMakeLists.txt  test.h  tests.pro
(+6155 files in other folders)
