# SPDX-FileCopyrightText: Copyright (C) swift Project Community / Contributors
# SPDX-License-Identifier: GPL-3.0-or-later OR LicenseRef-swift-pilot-client-1

add_subdirectory(afvclient)
add_subdirectory(blackmisc)
#add_subdirectory(blackmiscdbus)
add_subdirectory(blackmiscquantities)
add_subdirectory(blackmiscsim)
add_subdirectory(fsd)
add_subdirectory(hotkey)
add_subdirectory(weatherdata)
