# SPDX-FileCopyrightText: Copyright (C) swift Project Community / Contributors
# SPDX-License-Identifier: GPL-3.0-or-later OR LicenseRef-swift-pilot-client-1

add_subdirectory(afvclient)
add_subdirectory(misc)
#add_subdirectory(miscdbus)
add_subdirectory(miscquantities)
add_subdirectory(miscsim)
add_subdirectory(fsd)
add_subdirectory(hotkey)
